# Data-Seedling

./: .pre-commit-config.yaml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: pr_checks.yml
dataset_provisioning/: Makefile  README.md  dataset_provisioning.py  pipeline.json  pyproject.toml
dataset_provisioning/src/: dataset_provisioning.py
docs/: design_principles.md  quick_start.md
example_transform/: Makefile  README.md  pipeline.json  pyproject.toml
example_transform/src/example_transform/: db.py  entrypoint.py  monitoring.py  transform.py
example_transform/src/example_transform/tests/: conftest.py  test_transform.py
helloworld/: Makefile  README.md  helloworld.py  pipeline.json  pyproject.toml
helloworld/src/helloworld/: db.py  entrypoint.py  monitoring.py  transform.py
helloworld/src/helloworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
helloworld/src/helloworld/tests/: test_transform.py
patient_notes/: Demo.ipynb  Makefile  README.md  config.local.yaml  design_doc.md  pipeline.json  pyproject.toml
patient_notes/docs/: design_doc.md
patient_notes/src/patient_notes/: common_exceptions.py  common_types.py  config.py  conftest.py  datalake.py  monitoring.py  watermark.py
patient_notes/src/patient_notes/entrypoints/: feature_extraction.py  ingestion.py  pseudonymisation.py
patient_notes/src/patient_notes/stages/: feature_extraction.py
patient_notes/src/patient_notes/stages/pseudonymisation/: presidio.py  transform.py
patient_notes/src/patient_notes/tests/: conftest.py  test_datalake.py  test_db.py  test_watermark.py
patient_notes/src/patient_notes/tests/stages/: ta4h_test_data.snappy.parquet  test_feature_extraction.py  test_pseudonymisation.py
